--- a/css/style.css
+++ b/css/style.css
@@ -212,13 +212,15 @@ main article img {
     grid-column: 1/-1;
     align-items: center;
 }
-.sobre-info i{
+
+.sobre-info i {
     color: rgb(255, 52, 52);
     font-size: 1.4rem;
     display: inline-block;
     margin-right: 12px;
 }
-.sobre-info p{
+
+.sobre-info p {
     font-size: 1.2rem;
 }
 
@@ -228,6 +230,7 @@ main article img {
         opacity: 0;
         transform: translate(0, -60px, 0);
     }
+
     to {
         opacity: 1;
         transform: translate(0, 0, 0);
@@ -238,27 +241,56 @@ main article img {
     from {
         opacity: 1;
     }
+
     to {
         opacity: 0;
     }
 }
 
 @keyframes dirSecao {
-    from{
+    from {
         transition: 0.5s;
         transform: translate3d(60px, 0, 0);
     }
-    to{
+
+    to {
         transform: translate3d(0, 0, 0);
     }
 }
 
 @keyframes esqSecao {
-    from{
+    from {
         transition: 0.5s;
         transform: translate3d(-60px, 0, 0);
     }
-    to{
+
+    to {
         transform: translate3d(0, 0, 0);
+    }
+}
+
+/*Responsividade*/
+@media (max-width: 992px) {
+    header nav ul{
+        display: none;
+    }
+
+    .container img {
+        display: none;
+    }
+
+    .container {
+        background-image: url(/images/portifolio.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    article img {
+        grid-column: 1/-1;
+        justify-self: center;
+    }
+
+    .sobre-conteudo {
+        grid-column: 1/-1;
     }
 }
