--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,12 @@ main article img {
 @media (max-width: 992px) {
     header nav ul{
         display: none;
+
+    }
+
+    header i{
+        color: #f7f7f7;
+        font-size: 3rem;
     }
 
     .container img {
